src/components/custom-blocks/typing-code-block.module.css
.typingCodeBlock {
  position: relative;
}

.notStarted pre span {
  filter: blur(2px);
}

.playButton {
  display: flex;
  align-items: center;
  justify-content: center;
  background: transparent;
  border: 0;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  color: inherit;
  font-size: 200%;
  cursor: pointer;
}

.playText {
  display: block;
  width: 200px;
  height: 100px;
  background-color: rgba(238, 238, 238, 0.8);
  border: 1px solid rgba(214, 214, 214, 0.8);
  transition: 0.2s background-color;
  text-align: center;
  line-height: 100px;
  border-radius: 12px;
}

.replayButton {
  width: 150px;
  height: 50px;
  top: 50px;
  left: auto;
  right: 16px;
  font-size: 100%;
}

.replayButton .playText {
  width: 150px;
  height: 50px;
  line-height: 50px;
}

.playButton:hover .playText {
  background-color: rgba(214, 214, 214, 0.8);
}

body:global(.dark) .playText {
  background-color: rgba(26, 46, 60, 0.8);
  border: 1px solid rgba(52, 69, 82, 0.8);
}

body:global(.dark) .playButton:hover .playText {
  background-color: rgba(52, 69, 82, 0.8);
}

